--- a/_includes/quicklinks.html
+++ b/_includes/quicklinks.html
@@ -27,6 +27,7 @@
         {%- assign has_lec = false %}
         {%- assign has_lab = false %}
         {%- assign has_hw = false %}
+        {%- assign has_quiz = false %}
         {%- assign has_exam = false %}
         {%- assign link = "" %}
         {%- case dow %}
@@ -62,6 +63,13 @@
                         {% break %}
                     {% endif %}
                 {%- endfor %}
+                {%- for postl in site.data.quiz %}
+                    {% assign post = postl[1] %}
+                    {%- assign d = post.date | date: "%Y-%m-%d" %}
+                    {%- if d == dayf %}
+                        {% assign has_quiz = true %}
+                    {% endif %}
+                {%- endfor %}
                 {%- for postl in site.data.exam %}
                     {% assign post = postl[1] %}
                     {%- assign d = post.date | date: "%Y-%m-%d" %}
@@ -85,6 +93,9 @@
         {%- endcase %} 
         {%- if has_lec or has_lab or has_hw or has_exam %}
             {{ day | date: '%e' }}</a></span>
+            {%- if has_quiz %}
+                <span><a href="{{ site.base }}/quizzes.html" style="color:#aaaa00;">*</a></span>
+            {%- endif %}
         {%- else %}
             {{ day | date: '%e' }}</span>
         {%- endif %}
